--- a/SpyrosORM/SpyrosORM.csproj
+++ b/SpyrosORM/SpyrosORM.csproj
@@ -48,6 +48,8 @@
     <Compile Include="DataAccess\DbRelation.cs" />
     <Compile Include="DataAccess\DbTableField.cs" />
     <Compile Include="DataAccess\IDataAccess.cs" />
+    <Compile Include="DataAttributes\AllowIDInsertAttribute.cs" />
+    <Compile Include="DataAttributes\AllowNullAttribute.cs" />
     <Compile Include="DataAttributes\DataSourceAttribute.cs" />
     <Compile Include="DataAttributes\DbColumnAttribute.cs" />
     <Compile Include="DataAttributes\IsIDFieldAttribute.cs" />
