--- a/SpyrosORM/SpyrosORM.csproj
+++ b/SpyrosORM/SpyrosORM.csproj
@@ -61,6 +61,8 @@
     <Compile Include="DataModel\Region.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
